<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    <!--fullname-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_shape"
            android:padding="5dp"
            android:src="@drawable/avatar"
            android:tint="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fullname"
                android:theme="@style/titleTxttheme" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>
    <!--vehicle registration number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_shape"
            android:padding="5dp"
            android:src="@drawable/study"
            android:tint="@color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vehicleRegnumber"
                android:theme="@style/titleTxttheme" />

            <EditText
                android:id="@+id/carRegnumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>
    <!--Car Make-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_shape"
            android:padding="5dp"
            android:src="@drawable/car"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/carmake_brand"
                android:theme="@style/titleTxttheme" />

            <EditText
                android:id="@+id/carbrand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:textSize="13sp"

                />


        </LinearLayout>
    </LinearLayout>
    <!--car model-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_shape"
            android:padding="5dp"
            android:src="@drawable/insurance"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/carmodel"
                android:theme="@style/titleTxttheme" />

            <EditText

                android:id="@+id/cardmodel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:textSize="13sp"

                />


        </LinearLayout>
    </LinearLayout>
    <!--location-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_shape"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_location_on_24"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location_datail"
                android:theme="@style/titleTxttheme" />

            <EditText

                android:id="@+id/location_ET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:theme="@style/profileTxTtheme" />


        </LinearLayout>
    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_shape"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_mail_24"
            android:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Email"
                android:theme="@style/titleTxttheme" />

            <EditText
                android:id="@+id/email_ET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="XXpXX"
                android:textSize="13sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>